--- a/frontend/src/styles/productPage.module.css
+++ b/frontend/src/styles/productPage.module.css
@@ -1,18 +1,18 @@
 /* Basic Styling */
 
   .container {
-    max-width: 1200px;
+    /* max-width: 1300px; */
     margin: 0 auto;
     padding: 15px;
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-evenly;
     align-items: center;
   }
   
   /* Columns */
   .left-column {
     margin-top: 20px;
-    width: 65%;
+    width: 60%;
     position: relative;
   }
   
@@ -119,6 +119,7 @@
   .item{
     min-width: 250px;
     width: 23%;
+    margin-left: 20px;
   }
    .box {
     display: -webkit-box;
@@ -138,6 +139,7 @@
     color: #ffffff;
     border-radius: 15px;
     padding: 25px;
+    min-height: 310px;
   }
   
    .box .img-box {
@@ -187,10 +189,148 @@
    }
    .review_header{
     margin-left: 25px;
-    font-size: 22px;
+    font-size: 15px;
     padding-bottom: 0;
+    font-weight: 500;
    }
   
+   .review_container{
+    /* max-width: 700px; */
+    width: 100%;
+    background-color: #fff;
+    padding: 25px 30px;
+    border-radius: 5px;
+    box-shadow: 0 5px 10px rgba(0,0,0,0.15);
+  }
+  .review_container .title{
+    font-size: 25px;
+    font-weight: 500;
+    position: relative;
+  }
+  .review_container .title::before{
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    height: 3px;
+    width: 30px;
+    border-radius: 5px;
+    background: linear-gradient(135deg, #71b7e6, #9b59b6);
+  }
+  .content  .user-details{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: space-between;
+    margin: 20px 0 12px 0;
+  }
+   .user-details .input-box{
+    margin-bottom: 15px;
+    width: calc(100% / 2 - 20px);
+  }
+   .input-box span.details{
+    display: block;
+    font-weight: 500;
+    margin-bottom: 5px;
+  }
+  .user-details .input-box input{
+    height: 45px;
+    width: 100%;
+    outline: none;
+    font-size: 16px;
+    border-radius: 5px;
+    padding-left: 15px;
+    border: 1px solid #ccc;
+    border-bottom-width: 2px;
+    transition: all 0.3s ease;
+  }
+  .gender {
+    height: 45px;
+    width: 100%;
+    outline: none;
+    font-size: 16px;
+    border-radius: 5px;
+    padding-left: 15px;
+    border: 1px solid #ccc;
+    border-bottom-width: 2px;
+    transition: all 0.3s ease;
+  }
+  .gender option {
+    height: 45px;
+    width: 70%;
+    outline: none;
+    font-size: 16px;
+    border-radius: 5px;
+    padding-left: 15px;
+    border: 1px solid #ccc;
+    border-bottom-width: 2px;
+    transition: all 0.3s ease;
+  }
+    .button{
+     height: 45px;
+     margin: 35px 0
+   }
+    .button input{
+     height: 100%;
+     width: 100%;
+     border-radius: 5px;
+     border: none;
+     color: #fff;
+     font-size: 18px;
+     font-weight: 500;
+     letter-spacing: 1px;
+     cursor: pointer;
+     transition: all 0.3s ease;
+     background: linear-gradient(135deg, #71b7e6, #9b59b6);
+   }
+    .button input:hover{
+    /* trans: scale(0.99); */
+    background: linear-gradient(-135deg, #71b7e6, #9b59b6);
+    }
+    .custom-file-upload {
+      border: 1px solid #ccc;
+      display: inline-block;
+      padding: 6px 12px;
+      cursor: pointer;
+  }
+  /* input[type="file"] {
+      display: none;
+  } */
+  @media(max-width : 1200px) {
+    body {
+      height : 100vh;
+    }
+    .content  .user-details{
+      max-height: 700px;
+    }
+  }
+   @media(max-width: 700px){
+    body {
+      height : 100vh;
+    }
+   .container{
+    max-width: 100%;
+  }
+   .user-details .input-box{
+      margin-bottom: 15px;
+      width: 100%;
+    }
+     .category{
+      width: 100%;
+    }
+    .content  .user-details{
+      max-height: 300px;
+      
+    }
+    .user-details::-webkit-scrollbar{
+      width: 5px;
+    }
+    }
+    @media(max-width: 459px){
+    .container .content .category{
+      flex-direction: column;
+    }
+  }
   
   /* Responsive */
   @media (max-width: 830px) {
@@ -232,8 +372,8 @@
   
   @media (max-width: 535px) {
     .left-column img {
-      width: 220px;
-      top: -85px;
+      width: 100%;
+      /* top: -85px; */
     }
     .item{
       width: 70%;
