--- a/frontend/src/styles/home.module.css
+++ b/frontend/src/styles/home.module.css
@@ -93,6 +93,7 @@ a:focus {
       -ms-flex-direction: column;
           flex-direction: column;
   padding-left: 45px;
+  padding-right: 45px;
 }
 
 .hero_area .hero_social {
@@ -118,6 +119,12 @@ a:focus {
   color: #999;
   margin: 5px 0;
 }
+.review_header{
+  margin-left: 12px;
+  font-size: 15px;
+  padding-bottom: 0;
+  font-weight: 500;
+ }
 
 .hero_area .container-fluid {
   padding-left: 25px;
@@ -430,7 +437,7 @@ a:focus {
   position: absolute;
   top: 0;
   left: 0;
-  background-color: #f0d43a;
+  background: linear-gradient(130deg, #0b13a7 0%, #0040FF 100%);;
   color: #ffffff;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -723,6 +730,11 @@ a:focus {
   margin-bottom: 0;
   text-transform: uppercase;
 }
+.single_card{
+  margin-left: 10px;
+  border-radius: 10px;
+  /* box-shadow: 0 3px 4px -2px rgb(51 51 51 / 23%); */
+}
 
 .client_section .box .client_info .client_name h6 {
   color: #f0d43a;
@@ -919,9 +931,22 @@ a:focus {
     width: 40%;
 }
 .row{
-    display: flex;
+    /* display: flex;
     justify-content: space-evenly;
-    flex-wrap: wrap;
+    flex-wrap: wrap; */
+    min-width: 300px;
+    width: 30%;
+    margin-left: 15px;
+    margin-right: 15px;
+}
+.main_div{
+  display: flex;
+  justify-content: start;
+  flex-wrap: wrap;
+}
+.price-para{
+  font-size: 15px;
+  font-weight: 700;
 }
 
 /*# sourceMappingURL=style.css.map */
@@ -933,7 +958,37 @@ a:focus {
     }
   }
   
-  @media (max-width: 1120px) {}
+  @media (max-width: 1100px) {
+    .row{
+      /* display: flex;
+      justify-content: space-evenly;
+      flex-wrap: wrap; */
+      min-width: 300px;
+      width: 45%;
+  }
+  }
+  @media (max-width: 800px) {
+    .detail-box{
+      flex-direction: column;
+  }
+  }
+  @media (max-width: 750px) {
+    .row{
+      /* display: flex;
+      justify-content: space-evenly;
+      flex-wrap: wrap; */
+      min-width: 300px;
+      width: 90%;
+  }
+  .detail-box{
+    flex-direction: row;
+}
+  }
+  @media (max-width: 400px) {
+    .detail-box{
+      flex-direction: column;
+  }
+  }
   
   @media (max-width: 992px) {
     .hero_area {
@@ -1004,7 +1059,7 @@ a:focus {
   @media (max-width: 376px) {}
   
   @media (min-width: 1200px) {
-    .container {
+    /* .container {
       max-width: 1170px;
-    }
+    } */
   }
