added forget Password Function

--- a/backend/views/mailers/forget_pass.ejs
+++ b/backend/views/mailers/forget_pass.ejs
@@ -1,3 +1,2 @@
 Hi <%= name %>, your reset password link is
-http://localhost:3000/user/forgot-password/reset/?authkey=<%= auth_key
-%>&userid=<%=_id%>
+http://localhost:3000/forgetPassword/reset/<%= auth_key %>/<%=_id%>
