--- a/frontend/src/styles/slider.module.css
+++ b/frontend/src/styles/slider.module.css
@@ -8,6 +8,7 @@
     width: 90%;
     margin: auto;
     background: linear-gradient(130deg, #0b13a7 0%, #0040FF 100%);
+    background: linear-gradient(87deg, #172b4d 0, #1a174d 100%) !important;
     border-radius: 10px;
 }
 .content_div{
