--- a/frontend/src/styles/header.module.css
+++ b/frontend/src/styles/header.module.css
@@ -5,14 +5,59 @@ body {
   }
 .main_container{
     background: linear-gradient(130deg, #0b13a7 0%, #0040FF 100%);
+    background: linear-gradient(87deg, #172b4d 0, #1a174d 100%) !important;
+    /* margin-bottom: 10px; */
+}
+.nav_container{
+    padding-top: 18px;
+    padding-bottom: 18px;
+    padding-left: 20px;
+    padding-right: 20px;
 }
 .head_text{
     color: #ffffff;
-    font-size: 18px;
+    font-size: 20px;
     font-weight: 600;
-    margin-right: 15px;
+    margin-right: 30px;
     /* margin-top: 10px; */
 }
-.text{
+.text_cart{
     color: #ffffff;
+    margin: 10px;
 }
+.text_cart:hover{
+    color: #5e72e4;
+}
+.text_profile:hover{
+    color: #5e72e4;
+}
+.text_profile{
+    color: #ffffff;
+    margin: 10px 13px;
+    margin-right: 18px;
+}
+/* .btn {
+    font-size: 1rem;
+    font-weight: 600;
+    line-height: 1.5;
+    border: 1px solid transparent;
+    border-radius: .375rem;
+    margin-left: 75%;
+    margin-top: 10px;
+    height: 40px;
+  } */
+
+  .btn-primary {
+    color: #fff;
+    border-color: #5e72e4;
+    background-color: #5e72e4;
+    /* box-shadow: 0 4px 6px rgba(50, 50, 93, .11), 0 1px 3px rgba(0, 0, 0, .08); */
+    height: 40px;
+    border-radius: 5px;
+    padding-top: 8px;
+  }
+  
+  .btn-primary:hover {
+    background-color: white;
+    color: #5e72e4;
+  }
