--- a/frontend/src/styles/productPage.module.css
+++ b/frontend/src/styles/productPage.module.css
@@ -198,10 +198,10 @@
    .review_container{
     /* max-width: 700px; */
     width: 100%;
-    background-color: #fff;
+    /* background-color: #fff; */
     padding: 25px 30px;
     border-radius: 5px;
-    box-shadow: 0 5px 10px rgba(0,0,0,0.15);
+    /* box-shadow: 0 5px 10px rgba(0,0,0,0.15); */
   }
   .review_container .title{
     font-size: 25px;
