--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -53,6 +53,17 @@ h3 {
 .carousel a {
   margin: 0 auto;
 }
+.page-link{
+  background-color: #f2efef;
+  border-radius: 10px;
+}
+.page-item{
+  margin-left: 10px;
+  border-radius: 10px;
+}
+/* .page-link:hover{
+  border: none;
+} */
 @media (max-width: 900px) {
   .carousel-caption h2 {
     font-size: 2.5vw;
