--- a/frontend/src/styles/slider.module.css
+++ b/frontend/src/styles/slider.module.css
@@ -62,6 +62,11 @@
     color: #fff;
     font-size: 14px;
   }
+  .swiper_image_class{
+    height: 400px;
+    border-radius: 10px;
+    width: auto;
+  }
 
   @media(max-width : 980px) {
     .main_div{
@@ -100,11 +105,46 @@
       }
   }
 
+  @media(max-width : 750px) {
+    .swiper_image_class{
+      height: auto;
+      border-radius: 10px;
+      width: 90%;
+      margin: auto;
+      display: flex;
+      justify-content: center;
+      max-height: 400px;
+      margin-top: 15px;
+    }
+  }
   @media(max-width : 600px) {
     .main_div{
         width: 95%;
     }
+    .swiper_image_class{
+      height: auto;
+      border-radius: 10px;
+      width: 100%;
+      margin: auto;
+      display: flex;
+      justify-content: center;
+      max-height: 300px;
+      margin-top: 15px;
+    }
     .slider_para{
         display: none;
+    }
+  }
+
+  @media(max-width : 350px) {
+    .swiper_image_class{
+      height: auto;
+      border-radius: 10px;
+      width: 100%;
+      margin: auto;
+      display: flex;
+      justify-content: center;
+      max-height: 200px;
+      margin-top: 15px;
     }
   }
